--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <div>
         <nav class="navbar navbar-dark navbar-expand-lg navbar-fondo">
             <div class="container-fluid">
-                <a class="navbar-brand main-logo" href="javascript:void(0);" routerLink="home">
+                <a class="navbar-brand main-logo" href="javascript:void(0);" routerLink="/home">
                     <img src="../../../assets/main-logo.png" class="me-2" height="80" alt="main logo" loading="lazy" />
                     SuperC <small> ■ </small> Sala de Juegos
                 </a>
@@ -14,13 +14,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="javascript:void(0);" routerLink="home">Home</a>
+                            <a class="nav-link" href="javascript:void(0);" routerLink="/home">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="javascript:void(0);">Sala de chat</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);">Sobre mí</a>
+                            <a class="nav-link" href="javascript:void(0);" routerLink="/sobremi">Sobre mí</a>
                         </li>
                     </ul>
                 </div>
