--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,12 +2,12 @@
 
 <div class="container py-5 h-100">
     <div class="row d-flex justify-content-between align-items-center h-100">
-        <div class="card mb-3" style="max-width: 540px;">
+        <div class="card mb-3" style="max-width: 540px; min-height: 260px;">
             <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="../../../assets/ahorcado.png" alt="Juego de ahorcado" class="img-fluid rounded-start" />
+                <div class="col-md-5">
+                    <img src="../../../assets/ahorcado-home.png" alt="Juego de ahorcado" class="img-fluid rounded-start" />
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-7">
                     <div class="card-body">
                         <h4 class="card-title">Ahorcado</h4>
                         <p class="card-text">
@@ -18,12 +18,12 @@
             </div>
         </div>
 
-        <div class="card mb-3" style="max-width: 540px;">
+        <div class="card mb-3" style="max-width: 540px; min-height: 260px;">
             <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="../../../assets/mayor-o-menor.png" alt="cartas" class="img-fluid rounded-start" />
+                <div class="col-md-5">
+                    <img src="../../../assets/mayor-o-menor-home.png" alt="cartas" class="img-fluid rounded-start" />
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-7">
                     <div class="card-body">
                         <h4 class="card-title">Mayor o menor</h4>
                         <p class="card-text">
@@ -34,13 +34,13 @@
             </div>
         </div>
 
-        <div class="card mb-3" style="max-width: 540px;">
+        <div class="card mb-3" style="max-width: 540px; min-height: 260px;">
             <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="../../../assets/preguntados.png" alt="Signo de interrogación"
-                        class="img-fluid rounded-start" />
+                <div class="col-md-5">
+                    <img src="../../../assets/preguntados-home.png" alt="Signo de interrogación"
+                        class="img-fluid rounded mx-auto d-block" />
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-7">
                     <div class="card-body">
                         <h4 class="card-title">Preguntados</h4>
                         <p class="card-text">
@@ -51,12 +51,12 @@
             </div>
         </div>
 
-        <div class="card mb-3" style="max-width: 540px;">
+        <div class="card mb-3" style="max-width: 540px; min-height: 260px;">
             <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="../../../assets/simon.png" alt="Simón dice" class="img-fluid rounded-start" />
+                <div class="col-md-5">
+                    <img src="../../../assets/simon-home.png" alt="Simón dice" class="img-fluid rounded-start" />
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-7">
                     <div class="card-body">
                         <h4 class="card-title">Simón dice</h4>
                         <p class="card-text">
