--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
+    background: #6a11cb;
     background-image: url("./assets/background.jpg");
     background-position: center center;
     background-repeat: no-repeat;
