agrego botones en el home

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -9,3 +9,9 @@ img {
     min-height: 260px;
     width:auto;
 }
+
+.botones-juegos {
+    color: gainsboro;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%, rgba(0,0,0,1) 100%);
+}
