--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,17 +2,26 @@
 
 <div class="container py-5 h-100">
     <div class="row d-flex justify-content-between align-items-center h-100">
+
         <div class="card mb-3" style="max-width: 540px; min-height: 260px;">
             <div class="row g-0">
                 <div class="col-md-5">
-                    <img src="../../../assets/ahorcado-home.png" alt="Juego de ahorcado" class="img-fluid rounded-start" />
+                    <img src="../../../assets/ahorcado-home.png" alt="Juego de ahorcado"
+                        class="img-fluid rounded-start" />
                 </div>
                 <div class="col-md-7">
-                    <div class="card-body">
-                        <h4 class="card-title">Ahorcado</h4>
-                        <p class="card-text">
-                            Adiviná la palabra oculta, una letra a la vez.
-                        </p>
+                    <div class="card-body d-flex flex-column justify-content-between h-100">
+                        <div>
+                            <h4 class="card-title">Ahorcado</h4>
+                            <p class="card-text">
+                                Adiviná la palabra oculta, una letra a la vez.
+                            </p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Ir a juego</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores
+                                puntajes</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -24,11 +33,18 @@
                     <img src="../../../assets/mayor-o-menor-home.png" alt="cartas" class="img-fluid rounded-start" />
                 </div>
                 <div class="col-md-7">
-                    <div class="card-body">
-                        <h4 class="card-title">Mayor o menor</h4>
-                        <p class="card-text">
-                            La próxima carta del mazo, ¿es mayor o menor que la que recién salió?
-                        </p>
+                    <div class="card-body d-flex flex-column justify-content-between h-100">
+                        <div>
+                            <h4 class="card-title">Mayor o menor</h4>
+                            <p class="card-text">
+                                La próxima carta del mazo, ¿es mayor o menor que la que recién salió?
+                            </p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Ir a juego</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores
+                                puntajes</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -41,11 +57,18 @@
                         class="img-fluid rounded mx-auto d-block" />
                 </div>
                 <div class="col-md-7">
-                    <div class="card-body">
-                        <h4 class="card-title">Preguntados</h4>
-                        <p class="card-text">
-                            ¿Cuánto sabés sobre este tema?
-                        </p>
+                    <div class="card-body d-flex flex-column justify-content-between h-100">
+                        <div>
+                            <h4 class="card-title">Preguntados</h4>
+                            <p class="card-text">
+                                ¿Cuánto sabés sobre este tema?
+                            </p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Ir a juego</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores
+                                puntajes</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -57,14 +80,22 @@
                     <img src="../../../assets/simon-home.png" alt="Simón dice" class="img-fluid rounded-start" />
                 </div>
                 <div class="col-md-7">
-                    <div class="card-body">
-                        <h4 class="card-title">Simón dice</h4>
-                        <p class="card-text">
-                            Desafiá tu memoria, siguiendo la cadema de colores.
-                        </p>
+                    <div class="card-body d-flex flex-column justify-content-between h-100">
+                        <div>
+                            <h4 class="card-title">Simón dice</h4>
+                            <p class="card-text">
+                                Desafiá tu memoria, siguiendo la cadema de colores.
+                            </p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Ir a juego</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores
+                                puntajes</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
