--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -8,3 +8,18 @@
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
 }
+
+.avatares-en-linea {
+    flex-wrap: nowrap;
+}
+
+.boton-avatar {
+    background-color: transparent;
+    border: none;
+    color: gainsboro;
+}
+
+.imagen-avatar>img {
+    max-width: 100px;
+    border-radius: 50%;
+}
