--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -33,12 +33,6 @@
                                     class="btn btn-outline-light btn-lg px-5" type="submit">
                                     {{ isLogin ? 'Ingresar' : 'Crear usuario' }}
                                 </button>
-
-                                <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                                    <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                                    <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                                    <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                                </div>
                             </div>
 
                             <div>
@@ -50,6 +44,50 @@
                                 </p>
                             </div>
                         </div>
+
+                        <!-- ACCESO RÁPIDO -->
+                        <div class="card-body px-5 text-center">
+                            <div class="mb-md-5 mt-md-4">
+                                <h2 class="fw-bold mb-2 text-uppercase">
+                                    Usuarios regulares
+                                </h2>
+                                <p class="text-white-50 mb-5">Click en el botón para cargar los valores predefinidos.</p>
+
+                                <div class="container">
+                                    <div class="row justify-content-between">
+                                        <div class="col">
+                                            <button class="boton-avatar" type="button" (click)="loginRapido(authform, 'calavera@mail.com', 'calavera1234')">
+                                                <div class="imagen-avatar">
+                                                    <img src="../../../assets/avatar-calavera.png" alt="avatar de calavera">
+                                                </div>
+                                                <p>Calavera</p>
+                                            </button>
+                                        </div>
+
+                                        <div class="col">
+                                            <button class="boton-avatar" type="button" (click)="loginRapido(authform, 'gato@mail.com', 'gato1234')">
+                                                <div class="imagen-avatar">
+                                                    <img src="../../../assets/avatar-gato.png" alt="avatar de gato">
+                                                </div>
+                                                <p>Gato</p>
+                                            </button>
+                                        </div>
+
+                                        <div class="col">
+                                            <button class="boton-avatar" type="button" (click)="loginRapido(authform, 'mascara@mail.com', 'mascara1234')">
+                                                <div class="imagen-avatar">
+                                                    <img src="../../../assets/avatar-mascara.png" alt="avatar de mascara">
+                                                </div>
+                                                <p>Totem</p>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <!-- FIN ACCESO RÁPIDO -->
+
                     </form>
                 </div>
             </div>
