--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
                 <div class="card gradient-custom text-white" style="border-radius: 1rem">
                     <form #authform="ngForm" (ngSubmit)="onSubmit(authform)">
                         <div class="card-body p-5 text-center">
-                            <div class="mb-md-5 mt-md-4 pb-5">
+                            <div class="mb-4 mt-md-4">
                                 <h2 class="fw-bold mb-2 text-uppercase">
                                     {{ isLogin ? 'Decime quién sos' : 'Registrate para acceder' }}
                                 </h2>
@@ -55,7 +55,7 @@
 
                                 <div class="container">
                                     <div class="row justify-content-between">
-                                        <div class="col">
+                                        <div class="col columna-avatar">
                                             <button class="boton-avatar" type="button" (click)="loginRapido(authform, 'calavera@mail.com', 'calavera1234')">
                                                 <div class="imagen-avatar">
                                                     <img src="../../../assets/avatar-calavera.png" alt="avatar de calavera">
@@ -64,7 +64,7 @@
                                             </button>
                                         </div>
 
-                                        <div class="col">
+                                        <div class="col columna-avatar">
                                             <button class="boton-avatar" type="button" (click)="loginRapido(authform, 'gato@mail.com', 'gato1234')">
                                                 <div class="imagen-avatar">
                                                     <img src="../../../assets/avatar-gato.png" alt="avatar de gato">
@@ -73,7 +73,7 @@
                                             </button>
                                         </div>
 
-                                        <div class="col">
+                                        <div class="col columna-avatar">
                                             <button class="boton-avatar" type="button" (click)="loginRapido(authform, 'mascara@mail.com', 'mascara1234')">
                                                 <div class="imagen-avatar">
                                                     <img src="../../../assets/avatar-mascara.png" alt="avatar de mascara">
