--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -15,3 +15,13 @@ header {
 .main-logo > small {
     font-size: 0.5em;
 }
+
+.navbar-texto {
+    color: gainsboro;
+}
+
+.boton-cerrar-sesion {
+    /* display: block; */
+    /* color: gainsboro; */
+    /* width: max-content; */
+}
