--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,25 +7,37 @@
                     SuperC <small> ■ </small> Sala de Juegos
                 </a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler navbar-texto" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="javascript:void(0);" routerLink="/home">Home</a>
+                            <a class="nav-link navbar-texto" href="javascript:void(0);" routerLink="/home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);">Sala de chat</a>
+                            <a class="nav-link navbar-texto" href="javascript:void(0);">Sala de chat</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);" routerLink="/sobremi">Sobre mí</a>
+                            <a class="nav-link navbar-texto" href="javascript:void(0);" routerLink="/sobremi">Sobre mí</a>
                         </li>
                     </ul>
                 </div>
 
             </div>
+
+            <button class="btn boton-cerrar-sesion btn-outline-danger text-nowrap" type="button" data-toggle="collapse" data-target="#paraCerrarSesion"
+                aria-expanded="false" aria-controls="paraCerrarSesion">
+                Bienvenidx, usuarix
+            </button>
+
+            <div class="collapse" id="paraCerrarSesion">
+                <button class="btn btn-danger" type="button" (click)="cerrarSesion()">
+                    Cerrar sesión
+                </button>
+            </div>
+
         </nav>
     </div>
 </header>
