corrijo algunos bugs del sprint 2

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div>
-        <nav class="navbar navbar-dark navbar-expand-lg navbar-fondo">
+        <nav class="navbar navbar-dark navbar-expand-lg px-4 navbar-fondo">
             <div class="container-fluid">
                 <a class="navbar-brand main-logo" href="javascript:void(0);" routerLink="/home">
                     <img src="../../../assets/main-logo.png" class="me-2" height="80" alt="main logo" loading="lazy" />
