--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,12 +4,12 @@
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                 <div class="card gradient-custom text-white" style="border-radius: 1rem">
                     <form #authform="ngForm" (ngSubmit)="onSubmit(authform)">
-                        <div class="card-body p-5 text-center">
-                            <div class="mb-4 mt-md-4">
+                        <div class="card-body px-5 py-2 text-center">
+                            <div class="mb-4 mt-4">
                                 <h2 class="fw-bold mb-2 text-uppercase">
                                     {{ isLogin ? 'Decime quién sos' : 'Registrate para acceder' }}
                                 </h2>
-                                <p class="text-white-50 mb-5">Ingresá correo y contraseña</p>
+                                <p class="text-white-50 mb-4">Ingresá correo y contraseña</p>
 
                                 <div data-mdb-input-init class="form-outline form-white mb-4">
                                     <input type="email" id="typeEmailX" class="form-control form-control-lg"
@@ -47,11 +47,11 @@
 
                         <!-- ACCESO RÁPIDO -->
                         <div class="card-body px-5 text-center">
-                            <div class="mb-md-5 mt-md-4">
+                            <div class="mb-md-4 mt-md-4">
                                 <h2 class="fw-bold mb-2 text-uppercase">
                                     Usuarios regulares
                                 </h2>
-                                <p class="text-white-50 mb-5">Click en el botón para cargar los valores predefinidos.</p>
+                                <p class="text-white-50 mb-3">Click en el botón para cargar los valores predefinidos.</p>
 
                                 <div class="container">
                                     <div class="row justify-content-between">
