--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,9 +18,8 @@
                             </p>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Ir a juego</a>
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores
-                                puntajes</a>
+                            <a class="btn botones-juegos" href="javascript:void(0);" routerLink="/juegos/ahorcado" data-mdb-ripple-init>Ir a juego</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores puntajes</a>
                         </div>
                     </div>
                 </div>
@@ -41,9 +40,8 @@
                             </p>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Ir a juego</a>
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores
-                                puntajes</a>
+                            <a class="btn botones-juegos" href="javascript:void(0);" routerLink="/juegos/mayor-o-menor" data-mdb-ripple-init>Ir a juego</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores puntajes</a>
                         </div>
                     </div>
                 </div>
@@ -65,9 +63,8 @@
                             </p>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Ir a juego</a>
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores
-                                puntajes</a>
+                            <a class="btn botones-juegos" href="javascript:void(0);" routerLink="/juegos/preguntados" data-mdb-ripple-init>Ir a juego</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores puntajes</a>
                         </div>
                     </div>
                 </div>
@@ -82,15 +79,14 @@
                 <div class="col-md-7">
                     <div class="card-body d-flex flex-column justify-content-between h-100">
                         <div>
-                            <h4 class="card-title">Simón dice</h4>
+                            <h4 class="card-title">Código secreto</h4>
                             <p class="card-text">
-                                Desafiá tu memoria, siguiendo la cadema de colores.
+                                Intentá descubrir el código secreto para abrir la bóveda.
                             </p>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Ir a juego</a>
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores
-                                puntajes</a>
+                            <a class="btn botones-juegos" href="javascript:void(0);" routerLink="/juegos/codigo-secreto" data-mdb-ripple-init>Ir a juego</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores puntajes</a>
                         </div>
                     </div>
                 </div>
