sala de chat primer bosquejo

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
                             <a class="nav-link navbar-texto" href="javascript:void(0);" routerLink="/home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-texto" href="javascript:void(0);">Sala de chat</a>
+                            <a class="nav-link navbar-texto" href="javascript:void(0);" routerLink="/chat">Sala de chat</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link navbar-texto" href="javascript:void(0);" routerLink="/sobremi">Sobre mí</a>
@@ -29,7 +29,7 @@
 
             <button class="btn boton-cerrar-sesion btn-outline-danger text-nowrap" type="button" data-toggle="collapse" data-target="#paraCerrarSesion"
                 aria-expanded="false" aria-controls="paraCerrarSesion">
-                Bienvenidx, usuarix
+                Bienvenidx, {{ nombreUsuario }}
             </button>
 
             <div class="collapse" id="paraCerrarSesion">
