--- a/src/app/components/chat/chat.component.css
+++ b/src/app/components/chat/chat.component.css
@@ -14,10 +14,11 @@
   }
   
   .chat-body {
-    /* flex-grow: 1; */
+    flex-grow: 1;
     overflow-y: auto;
     padding: 10px;
-    background: transparent
+    background: transparent;
+    max-height: calc(100vh - 30vh);
   }
   
   .chat-messages {
