--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -8,7 +8,7 @@
     </div>
     
     <div class="row chat-body">
-      <div class="col-12 chat-messages" *ngFor="let mensaje of mensajes">
+      <div class="col-12 chat-messages" *ngFor="let mensaje of mensajes; let last = last">
         <div class="message" [ngClass]="mensaje.usuario == usuario ? 'my-message' : 'other-message'">
           <div class="message-content">
             <p class="nombre-usuario">{{ mensaje.usuario }}</p>
@@ -16,6 +16,7 @@
             <p class="mensaje">{{ mensaje.mensaje }}</p>
           </div>
         </div>
+        <div *ngIf="last" #scrollAnchor></div>
       </div>
     </div>
     
