cambio simon por codigo secreto - imagenes y textos

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -74,7 +74,7 @@
         <div class="card mb-3" style="max-width: 540px; min-height: 260px;">
             <div class="row g-0">
                 <div class="col-md-5">
-                    <img src="../../../assets/simon-home.png" alt="Simón dice" class="img-fluid rounded-start" />
+                    <img src="../../../assets/codigo-secreto-home.png" alt="Simón dice" class="img-fluid rounded-start" />
                 </div>
                 <div class="col-md-7">
                     <div class="card-body d-flex flex-column justify-content-between h-100">
