--- a/src/app/components/sobremi/sobremi.component.html
+++ b/src/app/components/sobremi/sobremi.component.html
@@ -23,11 +23,10 @@
 
 
     <div class="carousel-item">
-      <img src="../../../assets/sobre-mi-3-Simon.png" alt="Simón dice" class="rounded mx-auto d-block">
+      <img src="../../../assets/sobre-mi-3-CodigoSecreto.png" alt="Simón dice" class="rounded mx-auto d-block">
       <div class="carousel-caption d-none d-md-block texto-carousel">
         <h5>¿Por qué elegí este juego?</h5>
-        <p>Me gustaba el juego cuando era chica. Esta y todas sus versiones. Todavía no sé si no lo cambio la semana que
-          viene.<br>Plan B: el de descubrir el código secreto.</p>
+        <p>Tengo una versión en juego de mesa y me pareció interesante como opción. Pone a prueba el pensamiento estratégico del jugador y te desafía a vencer a la máquina.</p>
       </div>
     </div>
 
@@ -62,11 +61,10 @@
   </div>
 
   <div>
-    <img src="../../../assets/sobre-mi-3-Simon.png" alt="Simón dice" class="w-100 d-block">
+    <img src="../../../assets/sobre-mi-3-CodigoSecreto.png" alt="Código Secreto" class="w-100 d-block">
     <div class="texto-carousel-sm px-3">
       <h5>¿Por qué elegí este juego?</h5>
-      <p>Me gustaba el juego cuando era chica. Esta y todas sus versiones. Todavía no sé si no lo cambio la semana que
-        viene.<br>Plan B: el de descubrir el código secreto.</p>
+      <p>Tengo una versión en juego de mesa y me pareció interesante como opción. Pone a prueba el pensamiento estratégico del jugador y te desafía a vencer a la máquina.</p>
     </div>
   </div>
 
