--- a/src/app/modules/juegos/componentes/ahorcado/ahorcado.component.css
+++ b/src/app/modules/juegos/componentes/ahorcado/ahorcado.component.css
@@ -1,50 +1,64 @@
-.hangman-container {
+.ahorcado-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-  }
+}
 
-  .juego-header {
+.juego-header {
     color: red;
     padding: 10px;
     text-align: center;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5942752100840336) 30%, rgba(0,0,0,0.33657212885154064) 50%, rgba(0,0,0,0.6587009803921569) 70%, rgba(0,0,0,1) 100%);
-  }
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5942752100840336) 30%, rgba(0, 0, 0, 0.33657212885154064) 50%, rgba(0, 0, 0, 0.6587009803921569) 70%, rgba(0, 0, 0, 1) 100%);
+}
 
-  h4 {
+h4 {
     font-size: 24px;
     color: rgb(238, 122, 238);
     font-weight: bold;
     margin-top: 10px;
-  }
+}
 
-  .hangman-image {
-    width: 27em; /* Ajustar al tamaño de las imágenes */
+.ahorcado-image {
+    width: 27em;
     height: auto;
     margin: 20px;
-  }
-  
-  .letters-container {
+}
+
+.letras-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center; /* Centra los botones verticalmente respecto a la figura del ahorcado */
-    min-height: 300px; /* Establece una altura mínima que iguale a la imagen del ahorcado */
-  }
-  
-  .btn-letter {
+    align-items: center;
+    min-height: 300px;
+}
+
+.btn-letra {
     margin: 5px;
-    width: 40px;
-    height: 40px;
-    font-size: 18px;
+    width: 3em;
+    height: 3em;
+    font-size: 1.3em;
     text-align: center;
-    background-color: white;
-  }
-  
-  h4.palabra-a-descubrir {
+    background-color: purple;
+    color: gainsboro;
+}
+
+.palabra-a-descubrir {
+    padding: 15px;
+}
+
+.palabra-a-descubrir>h4 {
     font-size: 28px;
     letter-spacing: 10px;
-  }
+}
+
+.btn-warning {
+    font-size: 18px;
+    width: 150px;
+    margin-top: 20px;
+    background-color: navy;
+    color: gainsboro;
+    border: none;
+}
