--- a/src/app/modules/juegos/componentes/mayor-o-menor/mayor-o-menor.component.html
+++ b/src/app/modules/juegos/componentes/mayor-o-menor/mayor-o-menor.component.html
@@ -1,13 +1,13 @@
 <app-header></app-header>
 
 <div class="card-game-container container-fluid">
-    <div class="row justify-content-center mt-4 juego-header">
+    <div class="row justify-content-center juego-header">
       <div class="col-12 text-center">
         <h3>¿Mayor o menor?</h3>
       </div>
     </div>
 
-    <div class="row justify-content-center mt-4">
+    <div class="row justify-content-center mt-2">
         <div class="col-12 text-center">
           <h4>Puntos: {{ puntaje }}</h4>
         </div>
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div class="row justify-content-center mt-4">
+    <div class="row justify-content-center mt-2">
         <div class="col-auto">
           <button class="btn btn-warning" (click)="reiniciarPartida()">Reiniciar Partida</button>
         </div>
