--- a/src/app/components/sobremi/sobremi.component.html
+++ b/src/app/components/sobremi/sobremi.component.html
@@ -27,6 +27,7 @@
       <div class="carousel-caption d-none d-md-block texto-carousel">
         <h5>¿Por qué elegí este juego?</h5>
         <p>Tengo una versión en juego de mesa y me pareció interesante como opción. Pone a prueba el pensamiento estratégico del jugador y te desafía a vencer a la máquina.</p>
+        <p>¿Cómo jugar? El objetivo es descifrar el código secreto. Arriesgá 4 números al azar. Sobre tus números, la máquina te va a dar pistas: un punto rojo para los números que estén en el código y estén bien ubicados y un punto amarillo para los que estén en el código, pero vayan en otra ubicación. ¿La dificultad? No te dice cuál es cuál. Seguí arriesgando hasta descubrir el código o perder tus 10 intentos. Pero apurate, porque el tiempo corre.</p>
       </div>
     </div>
 
@@ -65,6 +66,7 @@
     <div class="texto-carousel-sm px-3">
       <h5>¿Por qué elegí este juego?</h5>
       <p>Tengo una versión en juego de mesa y me pareció interesante como opción. Pone a prueba el pensamiento estratégico del jugador y te desafía a vencer a la máquina.</p>
+      <p>¿Cómo jugar? El objetivo es descifrar el código secreto. Arriesgá 4 números al azar. Sobre tus números, la máquina te va a dar pistas: un punto rojo para los números que estén en el código y estén bien ubicados y un punto amarillo para los que estén en el código, pero vayan en otra ubicación. ¿La dificultad? No te dice cuál es cuál. Seguí arriesgando hasta descubrir el código o perder tus 10 intentos. Pero apurate, porque el tiempo corre.</p>
     </div>
   </div>
 
