--- a/src/app/modules/juegos/componentes/mayor-o-menor/mayor-o-menor.component.css
+++ b/src/app/modules/juegos/componentes/mayor-o-menor/mayor-o-menor.component.css
@@ -1,59 +1,59 @@
 .card-game-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+}
 
-  .juego-header {
-    color: red;
-    padding: 10px;
-    text-align: center;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5942752100840336) 30%, rgba(0,0,0,0.33657212885154064) 50%, rgba(0,0,0,0.6587009803921569) 70%, rgba(0,0,0,1) 100%);
-  }
+.juego-header {
+  color: red;
+  padding: 10px;
+  text-align: center;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5942752100840336) 30%, rgba(0, 0, 0, 0.33657212885154064) 50%, rgba(0, 0, 0, 0.6587009803921569) 70%, rgba(0, 0, 0, 1) 100%);
+}
 
-  h4 {
-    font-size: 24px;
-    color: rgb(238, 122, 238);
-    font-weight: bold;
-    margin-top: 10px;
-  }
-  
-  .card-image {
-    max-width: 200px;
-    height: auto;
-  }
-  
-  .btn {
-    width: 100px;
-    font-size: 18px;
-    margin: 5px;
-    border: none;
-  }
+h4 {
+  font-size: 24px;
+  color: rgb(238, 122, 238);
+  font-weight: bold;
+  margin-top: 10px;
+}
 
-  .btn-primary {
-    background-color: purple;
-  }
-  
-  .result-message {
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 20px;
-  }
-  
-  .success-message {
-    color: green;
-  }
-  
-  .error-message {
-    color: red;
-  }
+.card-image {
+  max-width: 200px;
+  height: auto;
+}
 
-  .btn-warning {
-    font-size: 18px;
-    width: 150px;
-    margin-top: 20px;
-    background-color: navy;
-    color: gainsboro;
-  }
+.btn {
+  width: 100px;
+  font-size: 18px;
+  margin: 5px;
+  border: none;
+}
+
+.btn-primary {
+  background-color: purple;
+}
+
+.result-message {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.success-message {
+  color: green;
+}
+
+.error-message {
+  color: red;
+}
+
+.btn-warning {
+  font-size: 18px;
+  width: 150px;
+  margin-top: 20px;
+  background-color: navy;
+  color: gainsboro;
+}
