--- a/src/app/modules/juegos/componentes/preguntados/preguntados.component.html
+++ b/src/app/modules/juegos/componentes/preguntados/preguntados.component.html
@@ -1,1 +1,73 @@
 <app-header></app-header>
+
+<div class="card-game-container container-fluid">
+    <div class="row justify-content-center juego-header">
+        <div class="col-12 text-center">
+            <h3>Preguntados</h3>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-2 mb-3 puntos-y-vidas">
+        <div class="col-6 text-center">
+            <h4>Puntos: {{ puntaje }}</h4>
+        </div>
+
+        <!-- Cartel de vidas -->
+        <div class="col-6 vidas text-center align-items-center">
+            <span *ngFor="let vida of [].constructor(vidas)">
+                <img src="../../../../../assets/vidas.png" alt="corazon" class="vidas-dibujo" />
+            </span>
+        </div>
+
+    </div>
+
+
+    <!-- Sección principal -->
+    <div class="row justify-content-center align-items-center seccion-principal">
+        <!-- Columna de la imagen -->
+        <div class="col-sm-10 offset-sm-1 col-md-4 offset-md-0 text-center">
+            <!-- Imagen del personaje -->
+            <img [src]="characterImageUrl" class="img-fluid" alt="Imagen del personaje" *ngIf="characterImageUrl" />
+        </div>
+        <!-- Columna de preguntas y opciones -->
+        <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-0 text-center">
+
+            <!-- Pregunta -->
+            <div class="question text-center">
+                <h4>{{ currentQuestion }}</h4>
+            </div>
+
+            <!-- Opciones -->
+            <div class="options text-center">
+                <div *ngFor="let option of options" class="my-3">
+                    <button class="btn btn-primary btn-block" (click)="checkAnswer(option)" [disabled]="isAnswered">
+                        {{ option }}
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Resultado -->
+    <div class="row justify-content-center mt-2">
+        <div class="col-12 text-center">
+            <div *ngIf="feedbackMessage" class="alert text-center"
+                [ngClass]="{'alert-success': isCorrect, 'alert-danger': !isCorrect}">
+                {{ feedbackMessage }}
+            </div>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-2">
+        <div class="col-auto" *ngIf="isAnswered && vidas > 0">
+            <!-- Botón para la siguiente pregunta -->
+            <button class="btn btn-warning" (click)="nextQuestion()">Siguiente pregunta</button>
+        </div>
+    </div>
+
+    <!-- Reiniciar el juego cuando se acaban las vidas -->
+    <div class="text-center mt-4" *ngIf="vidas === 0">
+        <button class="btn btn-danger" (click)="resetGame()">Reiniciar Juego</button>
+    </div>
+
+</div>
