codigo secreto funcional y vidas al preguntados

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -59,7 +59,7 @@
                         <div>
                             <h4 class="card-title">Preguntados</h4>
                             <p class="card-text">
-                                ¿Cuánto sabés sobre este tema?
+                                ¿Cuántos personajes de Marvel conocés?
                             </p>
                         </div>
                         <div class="d-flex justify-content-between">
