--- a/src/app/modules/juegos/componentes/codigo-secreto/codigo-secreto.component.html
+++ b/src/app/modules/juegos/componentes/codigo-secreto/codigo-secreto.component.html
@@ -1,3 +1,105 @@
 <app-header></app-header>
 
+<div class="juego-container container-fluid">
+    <div class="row justify-content-center juego-header">
+        <div class="col-12 text-center">
+            <h3>Código secreto</h3>
+        </div>
+    </div>
 
+    <div class="row justify-content-center mt-2">
+        <div class="col-12 text-center">
+            <h4>Tiempo: {{ tiempo }} segundos</h4>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <!-- Columna izquierda: Teclado numérico -->
+            <div class="col-md-6 d-flex justify-content-center align-items-center">
+                <div class="num-pad">
+                    <!-- Fila para mostrar los números ingresados por el jugador -->
+                    <div class="row">
+                        <div class="entered-code">
+                            <!-- Aquí se mostrará el número que el jugador está formando -->
+                            <span class="entered-digit" *ngFor="let digito of intentoCodigoActual">{{ digito }}</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <button class="btn num-btn" (click)="agregarDigito(1)"
+                            [disabled]="botonesDeshabilitados[1]">1</button>
+                        <button class="btn num-btn" (click)="agregarDigito(2)"
+                            [disabled]="botonesDeshabilitados[2]">2</button>
+                        <button class="btn num-btn" (click)="agregarDigito(3)"
+                            [disabled]="botonesDeshabilitados[3]">3</button>
+                    </div>
+                    <div class="row">
+                        <button class="btn num-btn" (click)="agregarDigito(4)"
+                            [disabled]="botonesDeshabilitados[4]">4</button>
+                        <button class="btn num-btn" (click)="agregarDigito(5)"
+                            [disabled]="botonesDeshabilitados[5]">5</button>
+                        <button class="btn num-btn" (click)="agregarDigito(6)"
+                            [disabled]="botonesDeshabilitados[6]">6</button>
+                    </div>
+                    <div class="row">
+                        <button class="btn num-btn" (click)="agregarDigito(7)"
+                            [disabled]="botonesDeshabilitados[7]">7</button>
+                        <button class="btn num-btn" (click)="agregarDigito(8)"
+                            [disabled]="botonesDeshabilitados[8]">8</button>
+                        <button class="btn num-btn" (click)="agregarDigito(9)"
+                            [disabled]="botonesDeshabilitados[9]">9</button>
+                    </div>
+                    <div class="row">
+                        <button class="btn num-btn"></button>
+                        <button class="btn num-btn" (click)="agregarDigito(0)"
+                            [disabled]="botonesDeshabilitados[0]">0</button>
+                        <button class="btn num-btn"></button>
+                    </div>
+                    <div class="row">
+                        <div class="entered-code">
+                            <button class="btn btn-funciones" (click)="borrarUltimo()">Borrar</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="entered-code">
+                            <button class="btn btn-funciones" (click)="compararCodigoIngresado()"
+                                [disabled]="intentoCodigoActual.length < 4">Enviar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col">
+                        <h4 class="int-previos">Intentos Anteriores</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col d-flex justify-content-center">
+                        <div class="attempts-list">
+                            <div class="attempt" *ngFor="let intento of intentosAnteriores">
+                                <!-- Mostrar los círculos de colores -->
+                                <div class="circles">
+                                    <span *ngFor="let color of intento.pistas" [ngStyle]="{'background-color': color}"
+                                        class="circle"></span>
+                                </div>
+                                <!-- Mostrar los dígitos ingresados -->
+                                <div class="digits">
+                                    <span *ngFor="let numero of intento.numerosIngresados">{{ numero }}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-2">
+        <div class="col-auto">
+            <button class="btn btn-warning" (click)="reiniciarPartida()">Reiniciar Partida</button>
+        </div>
+    </div>
+</div>
