agrego lógica para guardar resultados - creo componente para mostrar resultados mas altos y routing del componente

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="d-flex justify-content-between">
                             <a class="btn botones-juegos" href="javascript:void(0);" routerLink="/juegos/ahorcado" data-mdb-ripple-init>Ir a juego</a>
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores puntajes</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" routerLink="/juegos/ahorcado/mejores-puntajes" data-mdb-ripple-init>Mejores puntajes</a>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                         </div>
                         <div class="d-flex justify-content-between">
                             <a class="btn botones-juegos" href="javascript:void(0);" routerLink="/juegos/mayor-o-menor" data-mdb-ripple-init>Ir a juego</a>
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores puntajes</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" routerLink="/juegos/mayor-o-menor/mejores-puntajes" data-mdb-ripple-init>Mejores puntajes</a>
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         </div>
                         <div class="d-flex justify-content-between">
                             <a class="btn botones-juegos" href="javascript:void(0);" routerLink="/juegos/preguntados" data-mdb-ripple-init>Ir a juego</a>
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores puntajes</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" routerLink="/juegos/preguntados/mejores-puntajes" data-mdb-ripple-init>Mejores puntajes</a>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="d-flex justify-content-between">
                             <a class="btn botones-juegos" href="javascript:void(0);" routerLink="/juegos/codigo-secreto" data-mdb-ripple-init>Ir a juego</a>
-                            <a href="javascript:void(0);" class="btn botones-juegos" data-mdb-ripple-init>Mejores puntajes</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" routerLink="/juegos/codigo-secreto/mejores-puntajes" data-mdb-ripple-init>Mejores puntajes</a>
                         </div>
                     </div>
                 </div>
