--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -86,7 +86,7 @@
                         </div>
                         <div class="d-flex justify-content-between">
                             <a class="btn botones-juegos" href="javascript:void(0);" routerLink="/juegos/codigo-secreto" data-mdb-ripple-init>Ir a juego</a>
-                            <a href="javascript:void(0);" class="btn botones-juegos" routerLink="/juegos/codigo-secreto/mejores-puntajes" data-mdb-ripple-init>Mejores puntajes</a>
+                            <a href="javascript:void(0);" class="btn botones-juegos" routerLink="/juegos/codigo-secreto/mejores-puntajes" data-mdb-ripple-init>Mejores tiempos</a>
                         </div>
                     </div>
                 </div>
