--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link navbar-texto" href="javascript:void(0);" routerLink="/sobremi">Sobre mí</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link navbar-texto" href="javascript:void(0);" routerLink="/encuesta-satisfaccion">Encuesta de Satisfacción</a>
+                        </li>
                     </ul>
                 </div>
 
